# fencing-videos-downloader

./: LICENSE  README.md  launcher.py  pyproject.toml
.github/workflows/: build.yml
assets/: icon.icns  make_icon.py
fencing_videos_downloader/: __init__.py  __main__.py  app.py  downloader.py  utils.py
tests/: test_utils.py
